--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             width: 100%; 
             justify-content: center;
         }
+        .duck{
+            display: block;
+            margin-top: 10%;
+            margin-left: auto;
+            margin-right: auto;
+            width: 40%;
+        }
     </style>
 </head>
 <body>
@@ -56,6 +63,11 @@
             <h1 class="text-left">Rowze!</h1>
             <p>Compete with friends to build better habits</p>
         </div>
+
+        <div>
+            <img class="duck" src="img/duck_hi.jpg" alt="duck"> 
+        </div>
+        
         <div class="buttons text-center">
             <button type="button" onclick="location.href='home.html';" class="log-in" disabled>log in</button>
         </div>
