--- a/sign_up.html
+++ b/sign_up.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <style>
+        body{
+            font-family: "Montserrat"; 
+        }
         .duck{
             display: block;
             margin-top: 10%;
